# concord

./: .env.example  .gitignore  Dockerfile  README.md  concord.config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  budget.py  cache.py  config.py  db.py  main.py  models.py  normalize.py  providers.py  rate_limit.py  routing.py  schemas.py  security.py  supabase_stub.py
migrations/: 001_init.sql
